--- a/assignment-app-fronted/src/app/acceuil/acceuil.component.html
+++ b/assignment-app-fronted/src/app/acceuil/acceuil.component.html
@@ -1,1 +1,52 @@
-<app-assignment></app-assignment>
+<h2>{{ titre }}</h2>
+  <p>Nb documents : {{totalDocs}}, nbPages : {{totalPages}}
+    <br>
+  Page courante : {{page}}, nb de docs par page : {{limit}}
+  <!-- add slider for adjusting the limit property, with angular 17 -->
+  <mat-slider
+    min="1"
+    max="10"
+    step="1"
+    thumbLabel
+  >
+  <input matSliderThumb [(ngModel)]="limit" (change)="getAssignmentsFromService()">
+</mat-slider>
+</p>
+  <div>
+    <button mat-raised-button color="primary"
+            [disabled]="!hasPrevPage"
+            [disabled]="!hasPrevPage"
+            (click)="premierePage()">Première
+    </button>
+    &nbsp;&nbsp;&nbsp;
+    <button mat-raised-button color="primary"
+            [disabled]="!hasPrevPage"
+            (click)="pagePrecedente()">Précédent
+    </button>
+    &nbsp;&nbsp;&nbsp;
+    <button mat-raised-button color="primary"
+            [disabled]="!hasNextPage"
+            (click)="pageSuivante()">Suivante
+    </button>
+    &nbsp;&nbsp;&nbsp;
+    <button mat-raised-button color="primary"
+            [disabled]="!hasNextPage"
+            (click)="dernierePage()">Dernière
+    </button>
+  </div>
+
+  <mat-paginator #paginator
+               class="demo-paginator"
+               (page)="handlePageEvent($event)"
+               [length]="totalPages"
+               [pageSize]="limit"
+               [showFirstLastButtons]="true"
+               [pageSizeOptions]="[5, 10, 25]"
+               [pageIndex]="page"
+               aria-label="Select page">
+</mat-paginator>
+
+           @for(a of assignments; track a.nom_auteur) {
+            <app-assignment  [id]="a._id"></app-assignment>
+        }
+
