--- a/assignment-app-fronted/src/app/login/login.component.html
+++ b/assignment-app-fronted/src/app/login/login.component.html
@@ -1,27 +1,27 @@
-<mat-card>
-    <mat-card-title>Login</mat-card-title>
-<mat-card-content>
-<form [formGroup]="form" (ngSubmit)="submit()">
-  <p>
-    <mat-form-field>
-      <input type="text" matInput placeholder="Username" formControlName="username">
-    </mat-form-field>
-  </p>
+<mat-card class="large-card">
+  <mat-card-title>Login</mat-card-title>
+  <mat-card-content>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+      <p>
+        <mat-form-field class="large-input">
+          <input type="email" matInput placeholder="Email" formControlName="email">
+        </mat-form-field>
+      </p>
 
-  <p>
-    <mat-form-field>
-      <input type="password" matInput placeholder="Password" formControlName="password">
-    </mat-form-field>
-  </p>
+      <p>
+        <mat-form-field class="large-input">
+          <input type="password" matInput placeholder="Mot de passe" formControlName="mdp">
+        </mat-form-field>
+      </p>
 
-  <p *ngIf="error" class="error">
-    {{ error }}
-  </p>
+      <p *ngIf="error" class="error">
+        {{ error }}
+      </p>
 
-  <div class="button">
-    <button type="submit" mat-button>Se Connecter</button>
-  </div>
+      <div class="button">
+        <button type="submit" mat-button>Se Connecter</button>
+      </div>
 
-</form>
-</mat-card-content>
+    </form>
+  </mat-card-content>
 </mat-card>
