--- a/assignment-app-fronted/src/app/login/login.component.css
+++ b/assignment-app-fronted/src/app/login/login.component.css
@@ -35,3 +35,10 @@
     display: flex;
     justify-content: flex-end;
   }
+
+  .spinner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Ajustez la hauteur selon vos besoins */
+  }
