--- a/assignment-app-fronted/src/app/login/login.component.html
+++ b/assignment-app-fronted/src/app/login/login.component.html
@@ -18,10 +18,13 @@
         {{ error }}
       </p>
 
-      <div class="button">
+      <div class="button" *ngIf="!isLoading; else spinner">
         <button type="submit" mat-button>Se Connecter</button>
       </div>
-
+      <ng-template #spinner class="spinner">
+        <mat-spinner  [diameter]="30"></mat-spinner>
+      </ng-template> 
     </form>
   </mat-card-content>
 </mat-card>
+
