--- a/assignment-app-fronted/src/app/shared/assignment/assignment.component.html
+++ b/assignment-app-fronted/src/app/shared/assignment/assignment.component.html
@@ -1,2 +1,1 @@
-
-<div class="example-box" cdkDrag>{{data.nom_auteur}}</div>
+<div class="example-box" cdkDrag>{{data.titre}} {{data.auteur.nom}}</div> 
