--- a/assignment-app-fronted/src/app/acceuil/acceuil.component.css
+++ b/assignment-app-fronted/src/app/acceuil/acceuil.component.css
@@ -1,3 +1,15 @@
+.container {
+  height: 500px;
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.example-sidenav-content {
+  align-items: center;
+  justify-content: center;
+  margin-left: 17%;
+  display: block;
+}
+
 .example-container {
     width: 400px;
     max-width: 100%;
