--- a/assignment-app-fronted/src/app/shared/navbar/navbar.component.html
+++ b/assignment-app-fronted/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,13 @@
-<mat-toolbar color="primary">
-    <span>Assignement App</span>
+<mat-toolbar class="nav-bar">
+    <!-- <span>Assignment</span> -->
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <button mat-icon-button class="example-icon" [matMenuTriggerFor]="menu" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
     </button>
-  </mat-toolbar>
+    <mat-menu #menu="matMenu">
+      <button mat-menu-item (click)="logout()">
+        <mat-icon>exit_to_app</mat-icon>
+        <span>Logout</span>
+      </button>
+    </mat-menu>
+</mat-toolbar>
