--- a/assignment-app-fronted/src/app/sidenav/sidenav.component.html
+++ b/assignment-app-fronted/src/app/sidenav/sidenav.component.html
@@ -33,10 +33,11 @@
             </div>
             <div class="etudiant-item">
                 <mat-list-item>
-                    <div>
-                        <mat-icon>list</mat-icon>
-                        <span>Liste</span>
-                    </div>
+                    <a routerLink="/etudiant" class="nav-link">
+                            <mat-icon>list</mat-icon>
+                            <span>Liste</span>
+                    </a>
+                   
                    <div>
                         <mat-icon>note_add</mat-icon>
                         <span>Ajout</span>
