--- a/assignment-app-fronted/src/app/login/login.component.html
+++ b/assignment-app-fronted/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <mat-card class="large-card">
+  <img src="../../assets/img/logo/assignmentLogo.jpg" alt="Logo" class="assignment-logo">
   <mat-card-title>Login</mat-card-title>
   <mat-card-content>
     <form [formGroup]="form" (ngSubmit)="submit()">
@@ -18,12 +19,16 @@
         {{ error }}
       </p>
 
-      <div class="button" *ngIf="!isLoading; else spinner">
-        <button type="submit" mat-button>Se Connecter</button>
-      </div>
-      <ng-template #spinner class="spinner">
-        <mat-spinner  [diameter]="30"></mat-spinner>
-      </ng-template> 
+      <div class="button-container">
+        <div *ngIf="!isLoading; else spinner">
+          <button type="submit" mat-button class="btn-style"><span class="text-conn">Se connecter</span></button>
+        </div>
+        <ng-template #spinner>
+          <div class="spinner">
+            <mat-spinner [diameter]="30"></mat-spinner>
+          </div>
+        </ng-template>
+      </div> 
     </form>
   </mat-card-content>
 </mat-card>
