--- a/assignment-app-fronted/src/app/sidenav/sidenav.component.css
+++ b/assignment-app-fronted/src/app/sidenav/sidenav.component.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     user-select: none;
-    width: auto;
+    width: 15%;
+    height: 100%;
   }
   
   .mat-mdc-list-item-icon {
@@ -11,7 +12,8 @@
 
   .liste-nav{
     background-color: #c1c6c6;
-    height: 100%
+    height: 100%;
+    width: 100%
   }
 
   .assignment-texte{
