--- a/assignment-app-fronted/src/app/sidenav/sidenav.component.html
+++ b/assignment-app-fronted/src/app/sidenav/sidenav.component.html
@@ -38,10 +38,10 @@
                             <span>Liste</span>
                     </a>
                    
-                   <div>
+                    <a routerLink="/etudiant/form" class="nav-link">
                         <mat-icon>note_add</mat-icon>
                         <span>Ajout</span>
-                   </div>
+                    </a>
                 </mat-list-item>
             </div>
         </div>
