--- a/assignment-app-fronted/src/app/etudiant/etudiant.component.html
+++ b/assignment-app-fronted/src/app/etudiant/etudiant.component.html
@@ -5,55 +5,81 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
+                <h1 class="titre">Liste etudiante</h1>
                 <div class="row">
-                    <div class="col-4"><button type="button" class="btn btn-light">Ajouter</button></div>
+                    <div class="col-4"><button type="button" routerLink="/etudiant/form" class="btn btn-light">Ajouter</button></div>
                     <div class="col-4">
                     </div>
                     <div class="col-4">
-                        <input type="texte" class="form-control" id="exampleFormControlInput1" placeholder="Recherche">
+                        <div class="row">
+                            <div class="col-8">
+                                <input type="text" class="form-control" [(ngModel)]="searchQuery"
+                                    (input)="onSearchInputChange()" id="exampleFormControlInput1"
+                                    placeholder="Recherche">
+                            </div>
+                            <div class="col-4">
+                                <button type="button" class="btn btn-customize" (click)="search()">Recherche</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 custom-table">
-                    <ng-container matColumnDef="position">
-                        <th mat-header-cell *matHeaderCellDef> Photo </th>
-                        <td mat-cell *matCellDef="let element"> 
-                            <img src="../../assets/img/logo/assignmentLogo.jpg" alt="Logo" class="assignment-logo">
-                        </td>
-                    </ng-container>
-    
-    
-                    <ng-container matColumnDef="name">
-                        <th mat-header-cell *matHeaderCellDef> Nom et prenom  </th>
-                        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-                    </ng-container>
-    
-                    <!-- Weight Column -->
-                    <ng-container matColumnDef="weight">
-                        <th mat-header-cell *matHeaderCellDef>  </th>
-                        <td mat-cell *matCellDef="let element"> 
-                            <div class="example-button-row">
-                                <div class="example-flex-container">
-                                    <div class="example-button-container">
-                                        <button mat-mini-fab color="accent"   matTooltip="Modification" class="edit" aria-label="Example icon button with a plus one icon">
-                                            <mat-icon>edit</mat-icon>
-                                        </button>
-                                      </div>
-                                    <div class="example-button-container">
-                                        <button mat-mini-fab color="warn" class="delete"   matTooltip="Supression" aria-label="Example icon button with a filter list icon">
-                                          <mat-icon>filter_list</mat-icon>
-                                        </button>
+                <div *ngIf="isLoading; else content" class="spinner-container">
+                    <mat-spinner></mat-spinner>
+                </div>
+                <ng-template #content>
+                    <table mat-table [dataSource]="data" class="mat-elevation-z8 custom-table">
+                        <ng-container matColumnDef="photo">
+                            <th mat-header-cell *matHeaderCellDef> Photo </th>
+                            <td mat-cell *matCellDef="let element">
+                                <img [src]="path + '/' + element.photo" alt="Logo" class="assignment-logo">
+                            </td>
+                        </ng-container>
+
+
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef> Nom et prenom </th>
+                            <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
+                        </ng-container>
+
+                        <!-- Weight Column -->
+                        <ng-container matColumnDef="action">
+                            <th mat-header-cell *matHeaderCellDef> </th>
+                            <td mat-cell *matCellDef="let element">
+                                <div class="example-button-row">
+                                    <div class="example-flex-container">
+                                        <div class="example-button-container">
+                                            <button mat-mini-fab color="accent" matTooltip="Modification" class="edit"
+                                                aria-label="Example icon button with a plus one icon">
+                                                <mat-icon>edit</mat-icon>
+                                            </button>
+                                        </div>
+                                        <div class="example-button-container">
+                                            <button mat-mini-fab color="warn" class="delete" matTooltip="Supression"
+                                                aria-label="Example icon button with a filter list icon">
+                                                <mat-icon>filter_list</mat-icon>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        
-                        </td>
-                    </ng-container>
-    
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                </table>
+
+                            </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
+                    <br>
+                    <div class="btn-group me-2" role="group" aria-label="First group">
+                        <button type="button" class="btn btn-primary" 
+                                *ngFor="let pageNumber of pageNumbers"
+                                [class.active]="pageNumber === currentPage" 
+                                (click)="goToPage(pageNumber)">
+                          {{pageNumber}}
+                        </button>
+                    </div>
+                </ng-template>
             </div>
         </div>
     </div>
-    
+
 </mat-sidenav-container>
