--- a/assignment-app-fronted/src/app/etudiant/form/form.component.html
+++ b/assignment-app-fronted/src/app/etudiant/form/form.component.html
@@ -1,1 +1,50 @@
-<p>form works!</p>
+<app-navbar></app-navbar>
+<app-sidenav></app-sidenav>
+
+<mat-sidenav-container autosize>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+                <div class="text-center ">
+                    <img [src]="imageUrl" class="rounded-circle" width="400px" height="400px" alt="...">
+                </div>
+                <div class="d-grid gap-2 col-6 mx-auto mt-5">
+                    <input type="file" id="fileInput" (change)="onFileSelected($event)" hidden>
+                    <button class="btn btn-customize" (click)="triggerFileInputClick()" type="button">Ajout photo</button>
+                </div>
+            </div>
+
+            <div class="col-6 mt-5">
+                <h1>Ajout étuidiant</h1>
+                <div class="row">
+                    <div class="col">
+                        <mat-form-field appearance="outline" class="nom">
+                            <mat-label>Nom</mat-label>
+                            <input matInput>
+                        </mat-form-field>
+                    </div>
+                    <div class="col">
+                        <mat-form-field appearance="outline" class="prenom">
+                            <mat-label>Prenom</mat-label>
+                            <input matInput>
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div class="row">
+                    <mat-form-field class="example-full-width" appearance="outline">
+                        <mat-label>Date de naissance</mat-label>
+                        <input matInput [matDatepicker]="picker">
+                        <mat-hint>MM/DD/YYYY</mat-hint>
+                        <mat-datepicker-toggle matIconSuffix [for]="picker" >
+                          <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
+                        </mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                </div>
+                <div class="row mt-5">
+                    <button class="btn btn-form" type="button">Enregister</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</mat-sidenav-container>
