--- a/assignment-app-fronted/src/app/etudiant/etudiant.component.html
+++ b/assignment-app-fronted/src/app/etudiant/etudiant.component.html
@@ -18,7 +18,7 @@
                                     placeholder="Recherche">
                             </div>
                             <div class="col-4">
-                                <button type="button" class="btn btn-customize" (click)="search()">Recherche</button>
+                                <button type="button" class="btn btn-customize" (click)="search()" required>Recherche</button>
                             </div>
                         </div>
                     </div>
@@ -37,8 +37,18 @@
 
 
                         <ng-container matColumnDef="name">
-                            <th mat-header-cell *matHeaderCellDef> Nom et prenom </th>
+                            <th mat-header-cell *matHeaderCellDef> Nom </th>
                             <td mat-cell *matCellDef="let element"> {{element.nom}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="prenom">
+                            <th mat-header-cell *matHeaderCellDef> Prenom </th>
+                            <td mat-cell *matCellDef="let element"> {{element.prenom}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="dateNaissance">
+                            <th mat-header-cell *matHeaderCellDef> Date de naissance </th>
+                            <td mat-cell *matCellDef="let element"> {{element.dateNaissance | date:'dd/MM/yyyy'}} </td>
                         </ng-container>
 
                         <!-- Weight Column -->
@@ -49,7 +59,7 @@
                                     <div class="example-flex-container">
                                         <div class="example-button-container">
                                             <button mat-mini-fab color="accent" matTooltip="Modification" class="edit"
-                                                aria-label="Example icon button with a plus one icon">
+                                                aria-label="Example icon button with a plus one icon" (click)="editStudent(element._id)">
                                                 <mat-icon>edit</mat-icon>
                                             </button>
                                         </div>
