--- a/assignment-app-fronted/src/app/etudiant/form/form.component.css
+++ b/assignment-app-fronted/src/app/etudiant/form/form.component.css
@@ -32,3 +32,11 @@
     height: 55px;
     font-style: italic;
   }
+
+  .spinner {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   width: 100%;
+   height: 36px; /* Assurez-vous que les éléments à l'intérieur prennent toute la largeur */
+}
