--- a/assignment-app-fronted/src/styles.css
+++ b/assignment-app-fronted/src/styles.css
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.success-notification {
+    background-color: #4caf50; /* Vert pour les succès */
+    color: white;
+}
