--- a/assignment-app-fronted/src/app/etudiant/etudiant.component.html
+++ b/assignment-app-fronted/src/app/etudiant/etudiant.component.html
@@ -64,6 +64,12 @@
                                             </button>
                                         </div>
                                         <div class="example-button-container">
+                                            <button mat-mini-fab color="warn" class="detail" matTooltip="Detail"
+                                                aria-label="Example icon button with a filter list icon" (click)="detailStudent(element._id)">
+                                                <mat-icon>visibility</mat-icon>
+                                            </button>
+                                        </div>
+                                        <div class="example-button-container">
                                             <button mat-mini-fab color="warn" class="delete" matTooltip="Supression"
                                                 aria-label="Example icon button with a filter list icon">
                                                 <mat-icon>filter_list</mat-icon>
