--- a/assignment-app-fronted/src/app/sidenav/sidenav.component.html
+++ b/assignment-app-fronted/src/app/sidenav/sidenav.component.html
@@ -55,14 +55,15 @@
             </div>
             <div class="matiere-item">
                 <mat-list-item>
-                    <div>
+                    <a routerLink="/matiere" class="nav-link">
                         <mat-icon>list</mat-icon>
                         <span>Liste</span>
-                    </div>
-                   <div>
-                        <mat-icon>note_add</mat-icon>
-                        <span>Ajout</span>
-                   </div>
+                </a>
+               
+                <a routerLink="/matiere/ajout" class="nav-link">
+                    <mat-icon>note_add</mat-icon>
+                    <span>Ajout</span>
+                </a>
                 </mat-list-item>
             </div>
         </div>
