--- a/assignment-app-fronted/src/app/etudiant/etudiant.component.css
+++ b/assignment-app-fronted/src/app/etudiant/etudiant.component.css
@@ -1,5 +1,5 @@
 .container {
-    height: 800px; 
+    /* height: 800px;  */
     margin-left: 20%;
     margin-top: 20px;
     /* border: 1px solid rgba(0, 0, 0, 0.5); */
@@ -68,4 +68,8 @@
 
 .btn-customize {
    background-color:  #c1c6c6;
+}
+
+.detail{
+  background-color:  #c1c6c6;
 }
