--- a/assignment-app-fronted/src/app/etudiant/form/form.component.css
+++ b/assignment-app-fronted/src/app/etudiant/form/form.component.css
@@ -1,5 +1,5 @@
 .container {
-    height: 800px; 
+    /* height: 800px;  */
     margin-left: 20%;
     margin-top: 20px;
     /* border: 1px solid rgba(0, 0, 0, 0.5); */
