--- a/assignment-app-fronted/src/app/etudiant/form/form.component.html
+++ b/assignment-app-fronted/src/app/etudiant/form/form.component.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <mat-form-field class="example-full-width" appearance="outline">
+                        <mat-form-field class="example-full-width date-select" appearance="outline">
                             <mat-label>Date de naissance</mat-label>
                             <input matInput [matDatepicker]="picker" formControlName="dateNaissance">
                             <mat-hint>MM/DD/YYYY</mat-hint>
