--- a/assignment-app-fronted/src/app/sidenav/sidenav.component.html
+++ b/assignment-app-fronted/src/app/sidenav/sidenav.component.html
@@ -33,15 +33,21 @@
             </div>
             <div class="etudiant-item">
                 <mat-list-item>
-                    <a routerLink="/etudiant" class="nav-link">
+                    <div>
+                        <a routerLink="/etudiant" class="nav-link">
                             <mat-icon>list</mat-icon>
                             <span>Liste</span>
                     </a>
+                    </div>
+                    <div>
+                        <a routerLink="/etudiant/form" class="nav-link">
+                            <mat-icon>note_add</mat-icon>
+                            <span>Ajout</span>
+                        </a>
+                    </div>
+                    
                    
-                    <a routerLink="/etudiant/form" class="nav-link">
-                        <mat-icon>note_add</mat-icon>
-                        <span>Ajout</span>
-                    </a>
+                    
                 </mat-list-item>
             </div>
         </div>
