--- a/assignment-app-fronted/src/app/sidenav/sidenav.component.html
+++ b/assignment-app-fronted/src/app/sidenav/sidenav.component.html
@@ -18,7 +18,7 @@
                     </div>
                    <div>
                         <mat-icon>note_add</mat-icon>
-                        <span>Ajout</span>
+                        <span>Add</span>
                    </div>
                 </mat-list-item>
             </div>
@@ -40,7 +40,7 @@
                    
                     <a routerLink="/etudiant/form" class="nav-link">
                         <mat-icon>note_add</mat-icon>
-                        <span>Ajout</span>
+                        <span>Add</span>
                     </a>
                 </mat-list-item>
             </div>
@@ -62,7 +62,7 @@
                
                 <a routerLink="/matiere/ajout" class="nav-link">
                     <mat-icon>note_add</mat-icon>
-                    <span>Ajout</span>
+                    <span>Add</span>
                 </a>
                 </mat-list-item>
             </div>
