commit crud etudiant et matiere

--- a/assignment-app-fronted/src/app/etudiant/detail-etudiant/detail-etudiant.component.css
+++ b/assignment-app-fronted/src/app/etudiant/detail-etudiant/detail-etudiant.component.css
@@ -1,8 +1,4 @@
-.container { 
-    margin-left: 20%;
-    margin-top: 20px;
-    /* border: 1px solid rgba(0, 0, 0, 0.5); */
-  }
-.detai-etudiant{
+
+/* .detai-etudiant{
     margin-top: 8%;
-}
+} */
