--- a/assignment-app-fronted/src/app/etudiant/etudiant.component.html
+++ b/assignment-app-fronted/src/app/etudiant/etudiant.component.html
@@ -4,8 +4,9 @@
 <mat-sidenav-container autosize>
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <h1 class="titre">Liste etudiante</h1>
+            <div class="col-2"></div>
+            <div class="col-10 content">
+                <h1 class="titre" style="text-align: center;font-size: 39px;">Liste etudiante</h1>
                 <div class="row">
                     <div class="col-4"><button type="button" routerLink="/etudiant/form" class="btn btn-light">Ajouter</button></div>
                     <div class="col-4">
