--- a/assignment-app-fronted/src/app/sidenav/sidenav.component.html
+++ b/assignment-app-fronted/src/app/sidenav/sidenav.component.html
@@ -17,8 +17,10 @@
                         <span>Liste</span>
                     </div>
                    <div>
+                    <a routerLink="/assignment/add" class="nav-link">
                         <mat-icon>note_add</mat-icon>
                         <span>Add</span>
+                    </a>
                    </div>
                 </mat-list-item>
             </div>
