--- a/assignment-app-fronted/src/app/matiere/form-matiere/form-matiere.component.css
+++ b/assignment-app-fronted/src/app/matiere/form-matiere/form-matiere.component.css
@@ -1,9 +1,3 @@
-.container {
-    /* //height: 800px;  */
-    margin-left: 30%;
-    margin-top: 20px;
-    /* border: 1px solid rgba(0, 0, 0, 0.5); */
-}
 
 h1 {
     font-size: 30px;
@@ -36,7 +30,11 @@ width: 82%;
 
 .btn-form{
     background-color: #126f7e;
-    margin-left: 8%;
+    /* margin-left: 8%;
     width: 19%;
-    margin-top: auto;
+    margin-top: auto; */
  }
+
+ .content {
+    margin-top: 1%;
+  }
