--- a/assignment-app-fronted/src/app/sidenav/sidenav.component.css
+++ b/assignment-app-fronted/src/app/sidenav/sidenav.component.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     user-select: none;
     width: 15%;
-    height: 100%;
+    height: 110vh;
   }
   
   .mat-mdc-list-item-icon {
@@ -105,7 +105,17 @@
 .nav-link {
   display: block;
   padding: 0;
-  color: #0d6efd;
+  color: #35373a;
   text-decoration: none;
   transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+}
+
+/* Change la couleur en blanc lors du survol */
+.nav-link:hover {
+  color: #126f7e;
+}
+
+/* Change la couleur en blanc lorsqu'un lien est activé (clic) */
+.nav-link:active {
+  color: #126f7e;
 }
