--- a/assignment-app-fronted/src/app/assignment/form-assignment/form-assignment.component.html
+++ b/assignment-app-fronted/src/app/assignment/form-assignment/form-assignment.component.html
@@ -11,7 +11,7 @@
                 <div class="row">
                     <form class="form">
                         <mat-form-field appearance="outline" class="nom">
-                            <mat-label>Titre</mat-label>
+                            <mat-label>Titre et date rendu</mat-label>
                             <input matInput formControlName="nom">
                         </mat-form-field>
                         <div class="row">
