--- a/assignment-app-fronted/src/app/assignment/detail-assignment/detail-assignment.component.css
+++ b/assignment-app-fronted/src/app/assignment/detail-assignment/detail-assignment.component.css
@@ -6,3 +6,10 @@
     background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
     background-size: cover;
   }
+
+  .spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px; /* Adjust height as needed to vertically center */
+}
