--- a/assignment-app-fronted/src/app/assignment/form-assignment/form-assignment.component.html
+++ b/assignment-app-fronted/src/app/assignment/form-assignment/form-assignment.component.html
@@ -7,24 +7,24 @@
 
             </div>
             <div class="col-10 content">
-                <h2 style="text-align: center;font-size: 39px;">Ajout</h2>
+                <h2 style="text-align: center;font-size: 39px;">Modifier</h2>
                 <div class="row">
                     <form class="form">
-                        <mat-form-field appearance="outline" class="nom">
+                        <mat-form-field appearance="outline" class="titre">
                             <mat-label>Titre</mat-label>
-                            <input matInput formControlName="nom">
+                            <input matInput formControlName="titre">
                         </mat-form-field>
                         <div class="row">
                             <div class="col-6" style="display: grid;">
-                                <mat-form-field appearance="outline" class="nom">
+                                <mat-form-field appearance="outline" class="note">
                                     <mat-label>Note</mat-label>
-                                    <input matInput type="number" formControlName="nom" min="0" max="20"> 
+                                    <input matInput type="number" formControlName="note" min="0" max="20"> 
                                 </mat-form-field>
                             </div>
                             <div class="col-6" style="display: grid;">
                                 <mat-form-field  appearance="outline">
                                     <mat-label>Date rendu</mat-label>
-                                    <input matInput [matDatepicker]="picker" formControlName="dateNaissance">
+                                    <input matInput [matDatepicker]="picker" formControlName="daterendu">
                                     <mat-hint>MM/DD/YYYY</mat-hint>
                                     <mat-datepicker-toggle matIconSuffix [for]="picker">
                                         <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
@@ -37,13 +37,13 @@
                             <div class="col-6" style="display: grid;">
                                 <mat-form-field class="example-full-width"  appearance="outline">
                                     <mat-label>Description</mat-label>
-                                    <textarea matInput></textarea>
+                                    <textarea matInput formControlName="description"></textarea>
                                 </mat-form-field>
                             </div>
                             <div class="col-6" style="display: grid;">
                                 <mat-form-field class="example-full-width"  appearance="outline">
                                     <mat-label>Remarque</mat-label>
-                                    <textarea matInput></textarea>
+                                    <textarea matInput formControlName="remarque"></textarea>
                                 </mat-form-field>
                             </div>
                         </div>
@@ -51,7 +51,7 @@
                             <div class="col-6" style="display: grid;">
                                 <mat-form-field appearance="outline">
                                     <mat-label>Séléctionner etudiant</mat-label>
-                                    <mat-select formControlName="professeur">
+                                    <mat-select formControlName="etudiant">
                                         @for (etudiant of listeEtudiant; track etudiant) {
                                             <mat-option [value]="etudiant._id">{{etudiant.nom}} {{etudiant.prenom}}</mat-option>
                                           }
@@ -61,7 +61,7 @@
                             <div class="col-6" style="display: grid;">
                                 <mat-form-field appearance="outline">
                                     <mat-label>Séléctionner matière</mat-label>
-                                    <mat-select formControlName="professeur">
+                                    <mat-select formControlName="matiere">
                                         @for (matiere of listMatiere; track matiere) {
                                             <mat-option [value]="matiere._id">Matiere :{{matiere.nom}} / Prof :{{matiere.professeur}}</mat-option>
                                           }
