--- a/assignment-app-fronted/src/app/matiere/form-matiere/form-matiere.component.html
+++ b/assignment-app-fronted/src/app/matiere/form-matiere/form-matiere.component.html
@@ -18,8 +18,8 @@
                         <div class="col-6">
                             <h1 class="text-center">Matière</h1>
                             <img [src]="imageUrlM" class="" width="150px" height="150px" alt="..." style="margin-left: 33%;">
-                            <input type="file" id="fileProf" (change)="onFileSelectedProf($event)" hidden>
-                            <button class="btn btn-customize"  (click)="fileProfClick()" type="button" style="margin-top: 6%;width: 30%;margin-left: 36%;">
+                            <input type="file" id="fileMatiere" (change)="onFileSelectedMatiere($event)" hidden>
+                            <button class="btn btn-customize"  (click)="fileMatiereClick()" type="button" style="margin-top: 6%;width: 30%;margin-left: 36%;">
                                 Ajouter photo
                             </button>
                         </div>
