--- a/assignment-app-fronted/src/app/matiere/matiere.component.html
+++ b/assignment-app-fronted/src/app/matiere/matiere.component.html
@@ -66,12 +66,12 @@
                                                 <mat-icon>visibility</mat-icon>
                                             </button>
                                         </div>
-                                        <div class="example-button-container" *ngIf="isAdmin">
+                                        <!-- <div class="example-button-container" *ngIf="isAdmin">
                                             <button mat-mini-fab color="warn" class="delete" matTooltip="Supression"
                                                 aria-label="Example icon button with a filter list icon">
                                                 <mat-icon>filter_list</mat-icon>
                                             </button>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
 
