--- a/assignment-app-fronted/src/app/sidenav/sidenav.component.html
+++ b/assignment-app-fronted/src/app/sidenav/sidenav.component.html
@@ -12,10 +12,10 @@
             </div>
             <div class="assignment-item">
                 <mat-list-item>
-                    <div>
+                    <a routerLink="/acceuil" class="nav-link">
                         <mat-icon>list</mat-icon>
                         <span>Liste</span>
-                    </div>
+                    </a>
                    <div>
                     <a routerLink="/assignment/add" class="nav-link">
                         <mat-icon>note_add</mat-icon>
