--- a/assignment-app-fronted/src/app/assignment/add-assignment/add-assignment.component.css
+++ b/assignment-app-fronted/src/app/assignment/add-assignment/add-assignment.component.css
@@ -13,3 +13,6 @@
     width: 100%;
     height: 36px; /* Assurez-vous que les éléments à l'intérieur prennent toute la largeur */
  }
+ /* .mat-step-icon-selected{
+  background-color: #126f7e;
+ } */
