--- a/assignment-app-fronted/src/app/assignment/assignment.component.html
+++ b/assignment-app-fronted/src/app/assignment/assignment.component.html
@@ -31,37 +31,44 @@
               </div>
             </div>
             <div cdkDropList [cdkDropListData]="todo" class="example-list" (cdkDropListDropped)="drop($event)">
-              @for (item of todo; track item) {
-              <div class="example-box">
-                <mat-card class="assignment-card" [cdkDragDisabled]="false" cdkDrag>
-                  <mat-card-header>
-                    <div mat-card-avatar class="example-header-image">
-                      <img class="avatar" [src]="path +'/'+ item.auteurDetails.photo">
-                    </div>
-                    <mat-card-title>{{item.auteurDetails.nom}}</mat-card-title>
-                    <mat-card-subtitle>{{item.titre}}</mat-card-subtitle>
-                  </mat-card-header>
-                  <img mat-card-image [src]="path +'/'+item.matiereDetails.photo" alt="{{item.matiereDetails.nom}}">
-                  <mat-card-content>
-                    <h3 mat-subheader>Date limite: {{item.dateDeRendu | date: 'dd/MM/yy'}}</h3>
-                    <p><b>Matière : </b>{{item.matiereDetails.nom}}</p>
-                    <div class="prof-container">
-                      <p><b>Photo du prof : {{item.matiereDetails.professeur}}</b></p>
-                      <div mat-card-avatar class="example-header-image">
-                        <img class="avatar" [src]="path + '/' +item.matiereDetails.photo_prof">
-                      </div>
-                    </div>
-                    <mat-divider></mat-divider>
-                  </mat-card-content>
-                  <mat-card-actions>
-                    <button mat-button routerLink="/assignment/detail/{{item._id}}" style="background-color: #126f7e;">Voir les détails</button>
-                  </mat-card-actions>
-                  <mat-card-footer>
-                    <!-- <mat-progress-bar mode="indeterminate"></mat-progress-bar> -->
-                  </mat-card-footer>
-                </mat-card>
-              </div>
+              @if(isPagineT==true)
+              {
+                <mat-spinner></mat-spinner>
               }
+              @else{
+                @for (item of todo; track item) {
+                  <div class="example-box">
+                    <mat-card class="assignment-card" [cdkDragDisabled]="false" cdkDrag>
+                      <mat-card-header>
+                        <div mat-card-avatar class="example-header-image">
+                          <img class="avatar" [src]="path +'/'+ item.auteurDetails.photo">
+                        </div>
+                        <mat-card-title>{{item.auteurDetails.nom}}</mat-card-title>
+                        <mat-card-subtitle>{{item.titre}}</mat-card-subtitle>
+                      </mat-card-header>
+                      <img mat-card-image [src]="path +'/'+item.matiereDetails.photo" alt="{{item.matiereDetails.nom}}">
+                      <mat-card-content>
+                        <h3 mat-subheader>Date limite: {{item.dateDeRendu | date: 'dd/MM/yy'}}</h3>
+                        <p><b>Matière : </b>{{item.matiereDetails.nom}}</p>
+                        <div class="prof-container">
+                          <p><b>Photo du prof : {{item.matiereDetails.professeur}}</b></p>
+                          <div mat-card-avatar class="example-header-image">
+                            <img class="avatar" [src]="path + '/' +item.matiereDetails.photo_prof">
+                          </div>
+                        </div>
+                        <mat-divider></mat-divider>
+                      </mat-card-content>
+                      <mat-card-actions>
+                        <button mat-button routerLink="/assignment/detail/{{item._id}}" style="background-color: #126f7e;">Voir les détails</button>
+                      </mat-card-actions>
+                      <mat-card-footer>
+                        <!-- <mat-progress-bar mode="indeterminate"></mat-progress-bar> -->
+                      </mat-card-footer>
+                    </mat-card>
+                  </div>
+                  }
+              }
+              
               
             </div>
             
@@ -90,40 +97,47 @@
               </div>
             </div>
             <div cdkDropList [cdkDropListData]="done" class="example-list" (cdkDropListDropped)="drop($event)">
-              @for (item of done; track item) {
-              <div class="example-box">
-                <mat-card class="assignment-card" [cdkDragDisabled]="false" cdkDrag>
-                  <mat-card-header>
-                    <div mat-card-avatar class="example-header-image">
-                      <img class="avatar" [src]="path +'/'+ item.auteurDetails.photo">
-                    </div>
-                    <mat-card-title>{{item.auteurDetails.nom}}</mat-card-title>
-                    <mat-card-subtitle>{{item.titre}}</mat-card-subtitle>
-                  </mat-card-header>
-                  <img mat-card-image [src]="path +'/'+item.matiereDetails.photo" alt="{{item.matiereDetails.nom}}">
-                  <mat-card-content>
-                    <h3 mat-subheader>Date limite: {{item.dateDeRendu | date: 'dd/MM/yy'}}</h3>
-                    <p>{{item.nom}}</p>
-                    <p><b>Note : </b>{{item.note}}</p>
-                    <p *ngIf="item.remarque"><b>Remarques : </b>{{item.remarque}}</p>
-                    <p><b>Matière : </b>{{item.matiereDetails.nom}}</p>
-                    <div class="prof-container">
-                      <p><b>Photo du prof : {{item.matiereDetails.professeur}}</b></p>
-                      <div mat-card-avatar class="example-header-image">
-                        <img class="avatar" [src]="path + '/' +item.matiereDetails.photo_prof">
-                      </div>
-                    </div>
-                    <mat-divider></mat-divider>
-                  </mat-card-content>
-                  <mat-card-actions>
-                    <button mat-button routerLink="/assignment/detail/{{item._id}}" style="background-color: #126f7e;">Voir les détails</button>
-                  </mat-card-actions>
-                  <mat-card-footer>
-                    <!-- <mat-progress-bar mode="indeterminate"></mat-progress-bar> -->
-                  </mat-card-footer>
-                </mat-card>
-              </div>
+              @if(isPagineR==true)
+              {
+                <mat-spinner></mat-spinner>
               }
+              @else{
+                @for (item of done; track item) {
+                  <div class="example-box">
+                    <mat-card class="assignment-card" [cdkDragDisabled]="false" cdkDrag>
+                      <mat-card-header>
+                        <div mat-card-avatar class="example-header-image">
+                          <img class="avatar" [src]="path +'/'+ item.auteurDetails.photo">
+                        </div>
+                        <mat-card-title>{{item.auteurDetails.nom}}</mat-card-title>
+                        <mat-card-subtitle>{{item.titre}}</mat-card-subtitle>
+                      </mat-card-header>
+                      <img mat-card-image [src]="path +'/'+item.matiereDetails.photo" alt="{{item.matiereDetails.nom}}">
+                      <mat-card-content>
+                        <h3 mat-subheader>Date limite: {{item.dateDeRendu | date: 'dd/MM/yy'}}</h3>
+                        <p>{{item.nom}}</p>
+                        <p><b>Note : </b>{{item.note}}</p>
+                        <p *ngIf="item.remarque"><b>Remarques : </b>{{item.remarque}}</p>
+                        <p><b>Matière : </b>{{item.matiereDetails.nom}}</p>
+                        <div class="prof-container">
+                          <p><b>Photo du prof : {{item.matiereDetails.professeur}}</b></p>
+                          <div mat-card-avatar class="example-header-image">
+                            <img class="avatar" [src]="path + '/' +item.matiereDetails.photo_prof">
+                          </div>
+                        </div>
+                        <mat-divider></mat-divider>
+                      </mat-card-content>
+                      <mat-card-actions>
+                        <button mat-button routerLink="/assignment/detail/{{item._id}}" style="background-color: #126f7e;">Voir les détails</button>
+                      </mat-card-actions>
+                      <mat-card-footer>
+                        <!-- <mat-progress-bar mode="indeterminate"></mat-progress-bar> -->
+                      </mat-card-footer>
+                    </mat-card>
+                  </div>
+                  }
+              }
+              
             </div>
             
           </div>
