commentaire et backend

--- a/assignment-app-fronted/src/app/assignment/assignment.component.html
+++ b/assignment-app-fronted/src/app/assignment/assignment.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <app-sidenav></app-sidenav>
+<!-- la plupart des codes ont ete piquer sur le site de angular material -->
 <mat-sidenav-container autosize>
   <div cdkDropListGroup class="ml-25 cdkDropListGroup">
     <div class="container">
